[package]
name = "desktop-man"
version = "0.0.1"
edition = "2021"
author = "konkitoman"

[lib]
path = "lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11_man = { version = "0.0.2", path = "../x11-man" }

[[example]]
name = "keyboard"
path = "./exemples/keyboard.rs"